# AEGIS

./: .gitignore  CLAUDE.md  comprehensive_evaluation_results.json  performance_results.json  pyproject.toml
.github/workflows/: test.yml
docs/: AEGIS_Appendix_A_Core_Implementation.md  AEGIS_Appendix_B_Model_Specifications.md  AEGIS_Appendix_C_Implementation_Plan.md  AEGIS_Appendix_D_Signal_Taxonomy.md  AEGIS_Comprehensive_Performance_Report.md  AEGIS_Marketing_Overview.md  AEGIS_Performance_Report.md  AEGIS_Technical_Specification.md  BASELINE_MAE_VALUES.md
docs/acceptance_results/: acceptance_report.md  acceptance_results.json
reports/: AEGIS_Comprehensive_Performance_Report.md  AEGIS_Performance_Report.md  AEGIS_Performance_Report_v2.md  AEGIS_Performance_Report_v3.md  AEGIS_Performance_Report_v4.md  AEGIS_Performance_Report_v5.md  AEGIS_v3_v4_Comparison.md  acceptance_report.md  acceptance_results.json
src/aegis/: __init__.py  config.py  system.py
src/aegis/core/: __init__.py  (+8 more)
test/: conftest.py  test_fixtures.py
test/acceptance/: test_signal_taxonomy_acceptance.py
test/integration/: __init__.py  test_multi_stream.py  test_regime_adaptation.py  test_robust_estimation.py  test_single_stream.py
test/regression/: __init__.py  test_prediction_accuracy.py
test/unit/: __init__.py  test_aegis.py  test_break_detector.py  test_combiner.py  test_config.py  test_cross_stream.py  test_prediction.py  test_prediction_buffer.py  test_quantile_tracker.py  test_scale_manager.py  test_stream_manager.py
test/validation/: __init__.py  test_signal_taxonomy.py
(+23 files in other folders)
