[project]
name = "aegis"
version = "0.1.0"
description = "Active Epistemic Generative Inference System for time series prediction"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
pythonpath = ["src"]
markers = [
    "integration: integration tests",
    "performance: performance tests",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
